src/com/farragofiction/ideaplugin/wordlist/WordList.bnf
{
    parserClass="com.farragofiction.ideaplugin.wordlist.parser.WordListParser"

    extends="com.intellij.extapi.psi.ASTWrapperPsiElement"

    psiClassPrefix="WordList"
    psiImplClassSuffix="Impl"
    psiPackage="com.farragofiction.ideaplugin.wordlist.psi"
    psiImplPackage="com.farragofiction.ideaplugin.wordlist.psi.impl"

    elementTypeHolderClass="com.farragofiction.ideaplugin.wordlist.psi.WordListTypes"
    elementTypeClass="com.farragofiction.ideaplugin.wordlist.psi.WordListElementType"
    tokenTypeClass="com.farragofiction.ideaplugin.wordlist.psi.WordListTokenType"
}

wordListFile ::= HEADER item_*

private item_ ::= (fileInclude|fileDefault|list|COMMENT|CRLF)

indent ::= "    "

fileInclude ::= INCLUDE FILENAME

fileDefault ::= DEFAULT (KEY SEPARATOR VALUE)

// list

variant ::= indent indent property

listEntryTitle ::= property

list ::= LISTNAME listDefault* (listInclude|listEntry)+

listEntry ::= indent listEntryTitle variant*

listInclude ::= indent INCLUDE listWeight

listDefault ::= indent DEFAULT (KEY SEPARATOR VALUE)

property ::= (KEY SEPARATOR VALUE) | KEY

listWeight ::= (LISTNAME SEPARATOR VALUE) | LISTNAME
